fix map card overflow and add placeholder img

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -100,7 +100,9 @@ p {
       5. Sun Rise & Sun Set Section
       ------------------------------------------------
       ----------------------------------------------*/
-
+.card-body img {
+      max-width: 100%;
+}
 
 /*----------------------------------------------
       ------------------------------------------------
